tests/data/pl0/valid/feature_io_roundtrip_q_bang.pl0
var x;
begin
  ? x;
  ! x;
  ! x + 1
end.
