tests/data/pl0/invalid/error_missing_do.pl0
var x;
begin
  while x < 1 ! x
end.
